--- a/modeling_sim/modeling_sim/modeling_sim.vcxproj.filters
+++ b/modeling_sim/modeling_sim/modeling_sim.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="billiards.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="class.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="class.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
